--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,23 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.body-style {
+  width: 100%;
+  background: #141418;
+  background-size: cover;
+  background-position: top left;
+  padding: 0 !important;
+}
+
+.hidden-input {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+  white-space: nowrap;
+}
